benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_DivMod_Zeroes_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_DivMod_Zeroes.rs
Time: 2025-09-15 18:58:43

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find value `res` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:55:26
   |
55 |   ensures ValidBitString(res@), Str2Int(res@) == n
   |                          ^^^ not found in this scope

error[E0425]: cannot find value `res` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:55:41
   |
55 |   ensures ValidBitString(res@), Str2Int(res@) == n
   |                                         ^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find value `res` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:55:26
   |
55 |   ensures ValidBitString(res@), Str2Int(res@) == n
   |                          ^^^ not found in this scope

error[E0425]: cannot find value `res` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:55:41
   |
55 |   ensures ValidBitString(res@), Str2Int(res@) == n
   |                                         ^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
